force-app/main/default/objects/Intake_Episode__c/Intake_Episode__c.object-meta.xml
<CustomObject>
    <description>The Intake Episode record links an Intake record and an Episode record. It must be provided by the organisation that delivers the episode, not the intake.</description>
    <label>Intake Episode</label>
    <nameField>
        <label>Intake Episode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intake Episodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>