force-app/main/default/objects/Intake_Episode__c/fields/Episode_Key__c.field-meta.xml
<CustomField>
    <fullName>Episode_Key__c</fullName>
    <description>This is a number or code assigned to each PMHC MDS episode. The Episode Key is unique and stable for each episode at the level of the organisation. This key must link to an existing episode within the PMHC MDS.</description>
    <label>Episode Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>