force-app/main/default/objects/Intake_Episode__c/fields/Episode_Organisation_Path__c.field-meta.xml
<CustomField>
    <fullName>Episode_Organisation_Path__c</fullName>
    <description>A sequence of colon separated Organisation Keys that fully specifies the Provider Organisation providing the clinical service to the client.</description>
    <label>Episode Organisation Path</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>